--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
         with:
           go-version: '^1.13.4' # The Go version to download (if necessary) and use.
       - name: Build
-        run: go build -o target/release/${{ matrix.artifact_name }} ./cmd/apitestr
+        run: go build -o target/release/${{ matrix.artifact_name }} ./cmd/app
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v1-release
         with:
